[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Simple_Platformer/8x8/Objects/ice_falling_spike.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Mountmend/icespike.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 3 )

[node name="icespike" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 5 )
scale = Vector2( 1, 0.990071 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_icespike_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_icespike_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
